Fix responsive bug in the private toour details page form

--- a/private_tour.html
+++ b/private_tour.html
@@ -222,30 +222,30 @@
                         <label for="" class="form-label" style="font-weight: 700;">Name</label>
                         <input class="form-control" type="text" placeholder="Enterez votre nom">
                     </div>
-                    <div class="form-group col-6 ">
+                    <div class="form-group col-md-6 ">
                         <label for="" class="form-label" style="font-weight: 700;">Email</label>
                         <input class="form-control" type="text" placeholder="Enterez votre email">
                     </div>
-                    <div class="form-group col-6">
+                    <div class="form-group col-md-6">
                         <label for="" class="form-label" style="font-weight: 700;">Numero de téléphone</label>
                         <input class="form-control" type="text" placeholder="Entrez votre numéro de téléphone">
                     </div>
 
-                    <div class="form-group col-3">
+                    <div class="form-group col-md-6 col-lg-3">
                         <label for="" class="form-label" style="font-weight: 700;">Type de tour</label>
                         <select class="form-control " id="">
                             <option value="">Selectionnez le tour privé</option>
                         </select>
                     </div>
-                    <div class="form-group col-3">
+                    <div class="form-group col-md-6 col-lg-3">
                         <label for="" class="form-label" style="font-weight: 700;"> Durée du tour</label>
                         <input class="form-control" type="number" placeholder="Entrez la durée">
                     </div>
-                    <div class="form-group col-3">
+                    <div class="form-group col-md-6 col-lg-3">
                         <label for="" class="form-label" style="font-weight: 700;">Nombre d'adulte</label>
                         <input class="form-control" type="number" placeholder="Nombre d'adulte">
                     </div>
-                    <div class="form-group col-3 " style="font-weight: 700;">
+                    <div class="form-group col-md-6 col-lg-3" style="font-weight: 700;">
                         <label for="" class="form-label">Nombre d'anfants</label>
                         <input class="form-control" type="number" placeholder="Nombre d'anfants">
                     </div>
