fixing the navigation buttons for the index page

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <span>Join us to explore oran</span>
                             <h2 class="text-center">Lorem ipsum dolor <br> sit amet consectetur.</h2>
                             <div class="btn-box">
-                                <a href="index.html" class="theme-btn btn-one">Discover More</a>
+                                <a href="./free_tours.html" class="theme-btn btn-one">Discover More</a>
                             </div>
                         </div>  
                     </div>
@@ -217,7 +217,7 @@
                                     <li>Free Tour concept, where <b style="color: #ff3300;">you choose the price</b>.</li>
                                 </ul>
                                 <div class="btn-box">
-                                    <a href="about.html" class="theme-btn btn-one">Book your place</a>
+                                    <a href="" class="theme-btn btn-one">Book your place</a>
                                 </div>
                             </div>
                         </div>
@@ -234,7 +234,7 @@
         <section class="news-section sec-pad" style="background-color: #FFCC00;">
             <div class="auto-container">
                 <div class="sec-title centred">
-                    <span class="sub-title"   >Nos tours gratuits</span>
+                    <span class="sub-title">Nos tours gratuits</span>
                     <h2 style="color: white !important;">Explorez nos tours gratuits</h2>
                 </div>
                 <div class="row clearfix">
@@ -253,7 +253,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -274,7 +274,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -318,7 +318,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -361,7 +361,7 @@
                                     <h3><a href="blog-details.html">Lorem ipsum dolor sit amet</a></h3>
                                     <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat consectetur magnam, quisquam veritatis a dolorum nulla error autem vero ipsam?</p>
                                     <div class="mt-4">
-                                        <a class="blog-btn">view more</a>
+                                        <a href="./tour_details.html" class="blog-btn">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -409,7 +409,7 @@
                                         <li>Lorem ipsum dolor sit amet.</li>
                                     </ul>
                                     <div class="btn-box">
-                                        <a href="about.html" class="theme-btn btn-one">Book here</a>
+                                        <a href="./private_tour.html" class="theme-btn btn-one">Book here</a>
                                     </div>
                                 </div>
                             </div>
